<resources>
    <string name="app_name">Weather Union KMM</string>
    <string name="home_screen_nav_name">home_screen</string>
    <string name="location_data_screen_nav_name">location_data_screen</string>
    <string name="enter_api_key_screen_nav_name">enter_api_key_screen</string>
    <string name="info_screen_nav_name">info_screen</string>
    <string name="navigate_to_home_page">Navigate to Home Page</string>
    <string name="menu">Menu</string>
    <string name="location_data">Location Data</string>
    <string name="enter_api_key">Enter API Key</string>
    <string name="info">Info</string>
    <string name="background_image">Background Image</string>
    <string name="project_name_colon">Project Name: </string>
    <string name="version_colon">Version: </string>
    <string name="version_string">1.0</string>
    <string name="weather_union_icon">Weather Union Icon</string>
    <string name="github_icon">GitHub Icon</string>
    <string name="linkedin_icon">LinkedIn Icon</string>
    <string name="weather_union_api_key">Weather Union API Key</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="enter_weather_union_api_key">Enter Weather Union API Key</string>
    <string name="press_keyboard_done_button_to_save_api_key">*Press keyboard done button to save API key</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="rain_intensity">Rain Intensity</string>
    <string name="total_rainfall">Total Rainfall</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="refresh">Refresh</string>
    <string name="about_colon">About: </string>
    <string name="about_value">This project is build with Kotlin Multiplatform (KMP) and Compose Multiplatform. The Weather Data is fetched from Weather Union API.</string>
</resources>
