...
        "locality_id": "ZWL004722",
        "latitude": 22.521693,
        "longitude": 88.389844,
        "device_type": 1
    },
    {
        "city_name": "Mumbai",
        "locality_name": "Mira Road East",
        "locality_id": "ZWL006536",
        "latitude": 19.27813,
        "longitude": 72.874722,
        "device_type": 1
    },
...
        "latitude": 19.076131,
        "longitude": 72.858715,
        "device_type": 1
    },
    {
        "city_name": "Mumbai",
        "locality_name": "Ghatkopar East, Mumbai",
        "locality_id": "ZWL004494",
        "latitude": 19.080794,
        "longitude": 72.92228,
        "device_type": 1
    },
    {
...
        "latitude": 19.09674,
        "longitude": 72.904562,
        "device_type": 1
    },
    {
        "city_name": "Mumbai",
        "locality_name": "Bandra West",
        "locality_id": "ZWL006995",
        "latitude": 19.068857,
        "longitude": 72.833,
        "device_type": 1
    },
    {
...
        "latitude": 19.021199,
        "longitude": 72.835378,
        "device_type": 1
    },
    {
        "city_name": "Mumbai",
        "locality_name": "Andheri West",
        "locality_id": "ZWL007667",
        "latitude": 19.137106,
        "longitude": 72.834828,
        "device_type": 1
    },
    {
...
        "locality_id": "ZWL008360",
        "latitude": 19.165716,
        "longitude": 73.105733,
        "device_type": 1
    },
    {
        "city_name": "Bengaluru",
        "locality_name": "Banashankari",
        "locality_id": "ZWL003467",
        "latitude": 12.936787,
        "longitude": 77.556079,
        "device_type": 1
    },
...
