...
    ) {
        Box(
            modifier = Modifier
                .weight(1f)
                .padding(start = 16.dp, end = 8.dp, top = 40.dp, bottom = 40.dp)
                .background(Color.Transparent)
                .testTag("city_text_field")
                .clickable {
                    onCityTextFieldClicked()
                }
        ) {
            OutlinedTextField(
                label = {
...
        }
        Box(
            modifier = Modifier
                .weight(1f)
                .padding(start = 16.dp, end = 8.dp, top = 40.dp, bottom = 40.dp)
                .background(Color.Transparent)
                .testTag("locality_text_field")
                .clickable {
                    onAreaTextFieldClicked()
                }
        ) {
            OutlinedTextField(
                label = {
...
